# Openclaude-Studio

./: .gitignore  .pylintrc  OpenclaudeStudio.spec  README.md  build_windows.ps1  main.py  pyproject.toml  requirements-build.txt  requirements.txt
.github/workflows/: pylint.yml
assets/: windows_version_info.txt
installer/: OpenclaudeStudio.iss
languages/: Russian.xml  en.US.xml  pt_br.xml
openclaude_studio/: app.py
openclaude_studio/models/: __init__.py  config.py  conversation.py
openclaude_studio/services/: __init__.py  conversation_service.py  crash_handler.py  discord_presence_service.py  export_service.py  git_service.py  language_service.py  logging_service.py  openclaude_service.py  provider_presets.py  provider_test_service.py  recovery_service.py  render_service.py  settings_service.py  telemetry_service.py
openclaude_studio/ui/: __init__.py  chat_widgets.py  main_window.py  settings_dialog.py  theme.py
tests/: test_conversation_service.py  test_discord_presence_service.py  test_git_service.py  test_language_service.py  test_provider_test_service.py  test_recovery_service.py  test_render_service.py
