[project]
name = "openclaude-studio"
version = "0.2.0"
description = "Modern PyQt6 desktop GUI for OpenClaude"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "PyQt6>=6.8",
  "markdown-it-py>=3.0",
  "Pygments>=2.19",
  "qtawesome>=1.4",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.11",
]

[tool.unittest]
testpaths = ["tests"]
